[workspace]
members = [
    ".",
    "crates/types",
    "crates/common",
    "crates/websocket",
    "crates/alloy-wrapper",
    "crates/tools",
    "crates/vrf",
    "tee_vlc",
    "tee_llm", 
    "operator/node_api",
    "operator/db_sql",
    "operator/runer",
    "worker",
]

exclude = []

resolver = "2"

[workspace.lints.clippy]
nursery = "allow"
cargo = "allow"
pedantic = "allow"
restriction = "allow"
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
incremental = true

[profile.artifact]
inherits = "release"

[workspace.dependencies]
futures = "0.3.30"
tokio = "1.36.0"
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.79", features = ["backtrace"] }
actix-web = "4.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
base64 = "0.13"

tracing = "0.1.40"
bincode = "1.3.3"
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }

tee_llm = { path = "./tee_llm", features = ["nitro-enclaves"]}
operator-runer = { path = "./operator/runer"}
