[package]
name = "tee-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
operator-runer.workspace = true
anyhow.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bincode.workspace = true
nix.workspace = true

tee_llm.workspace = true

[lints]
workspace = true
